# vaupie

./: .gitignore  README.adoc  pyproject.toml  requirements.txt  test_state.py  vau.py  venv.sh
tests/: test_state.py
vaupie/: cli.py  crypto.py  init.py  jwt.py  request.py
vaupy/: crypto.py  ecies.py  init.py  request.py  state.py
